WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219691
text-decoration-color animation should not be discrete
https://bugs.webkit.org/show_bug.cgi?id=219691
Summary
text-decoration-color animation should not be discrete
Antoine Quint
Reported
2020-12-09 08:51:21 PST
The text-decoration-color property is currently animatable as a discrete property. This should not be the case, it should interpolate just like any other color type property.
Attachments
Patch
(8.47 KB, patch)
2020-12-09 11:36 PST
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-12-09 08:51:41 PST
<
rdar://problem/72138361
>
Antoine Quint
Comment 2
2020-12-09 11:36:01 PST
Created
attachment 415780
[details]
Patch
EWS
Comment 3
2020-12-09 12:55:43 PST
Committed
r270597
: <
https://trac.webkit.org/changeset/270597
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 415780
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug