text-decoration-color animation should not be discrete https://bugs.webkit.org/show_bug.cgi?id=219691 <rdar://problem/72138361>

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-transitions/properties-value-003-expected.txt:
* web-platform-tests/web-animations/animation-model/animation-types/interpolation-per-property-002-expected.txt:

Source/WebCore:

We mistakenly added animation support for text-decoration-color in r269812 as a discrete property.
We now correctly make it a property that supports interpolation of the color type.

* animation/CSSPropertyAnimation.cpp:
(WebCore::CSSPropertyAnimationWrapperMap::CSSPropertyAnimationWrapperMap):


Canonical link: https://commits.webkit.org/232266@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270597 268f45cc-cd09-0410-ab3c-d52691b4dbfc